--- a/bookHub/docker-compose.yml
+++ b/bookHub/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - "8080:80"
     depends_on:
       - db
+    networks:
+      - mynetwork
 
   db:
     image: mysql:5.7
@@ -24,6 +26,8 @@ services:
     volumes:
       - db_data:/var/lib/mysql
       - ./database.sql:/docker-entrypoint-initdb.d/database.sql
+    networks:
+      - mynetwork
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
@@ -35,6 +39,11 @@ services:
       - "8081:80"
     depends_on:
       - db
+    networks:
+      - mynetwork
 
 volumes:
   db_data:
+
+networks:
+  mynetwork:
