--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,43 +11,43 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-    - name: Git Semantic Version
-      id: version
-      uses: PaulHatch/semantic-version@v4.0.3
-      with:
-        major_pattern: "major:"
-        minor_pattern: "feat:"
-        format: "${{version.major}}.${{version.minor}}.${{version.patch}}-prerelease${{version.increment}}"
+      - name: Git Semantic Version
+        id: version
+        uses: PaulHatch/semantic-version@v4.0.3
+        with:
+          major_pattern: "major:"
+          minor_pattern: "feat:"
+          format: "${{version.major}}.${{version.minor}}.${{version.patch}}-prerelease${{version.increment}}"
 
-    - name: Debug Semantic Version Outputs
-      run: |
-        echo "Major: ${{ steps.version.outputs.major }}"
-        echo "Minor: ${{ steps.version.outputs.minor }}"
-        echo "Patch: ${{ steps.version.outputs.patch }}"
-        echo "Increment: ${{ steps.version.outputs.increment }}"
-        echo "Version: ${{ steps.version.outputs.version }}"
+      - name: Debug Semantic Version Outputs
+        run: |
+          echo "Major: ${{ steps.version.outputs.version.major }}"
+          echo "Minor: ${{ steps.version.outputs.version.minor }}"
+          echo "Patch: ${{ steps.version.outputs.version.patch }}"
+          echo "Increment: ${{ steps.version.outputs.version.increment }}"
+          echo "Version: ${{ steps.version.outputs.version }}"
 
-    - name: Docker login
-      env:
-        DOCKER_USER: ${{ secrets.DOCKER_USER }}
-        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      run: |
-        echo $DOCKER_PASSWORD | docker login -u $DOCKER_USER --password-stdin
+      - name: Docker login
+        env:
+          DOCKER_USER: ${{ secrets.DOCKER_USER }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        run: |
+          echo $DOCKER_PASSWORD | docker login -u $DOCKER_USER --password-stdin
 
-    - name: Build Docker Image
-      env:
-        NEW_VERSION: ${{ steps.version.outputs.version }}
-      run: |
-        docker buildx build --platform linux/amd64,linux/arm64 -t "cryss/bookhub:${NEW_VERSION}" --push .
-        docker buildx build --platform linux/amd64,linux/arm64 -t "cryss/bookhub:latest" --push .
+      - name: Build Docker Image
+        env:
+          NEW_VERSION: ${{ steps.version.outputs.version }}
+        run: |
+          docker buildx build --platform linux/amd64,linux/arm64 -t "cryss/bookhub:${NEW_VERSION}" --push .
+          docker buildx build --platform linux/amd64,linux/arm64 -t "cryss/bookhub:latest" --push .
