--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,9 +26,13 @@ jobs:
         id: version
         uses: PaulHatch/semantic-version@v4.0.3
         with:
-          major_pattern: "major:"
-          minor_pattern: "feat:"
-          format: "${{ steps.version.outputs.version }}"
+          major_pattern: "^major:"
+          minor_pattern: "^feat:"
+          patch_pattern: "^fix:"
+          skip_commit_pattern: "^skip-release:"
+          branch_pattern: "main"
+          change_path: "."
+          format: "${{version}}"
 
       - name: Debug Semantic Version Outputs
         run: |
