--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,7 +28,11 @@ jobs:
         with:
           major_pattern: "major:"
           minor_pattern: "feat:"
-          format: "${{ steps.version.outputs.version }}"
+          patch_pattern: "fix:"
+          tag_prefix: "v"
+          short_tags: true
+          bump_each_commit: false
+          format: "${{version}}"
 
       - name: Debug Semantic Version Outputs
         run: |
