otravez docker-image.yml

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,8 +27,7 @@ jobs:
         uses: PaulHatch/semantic-version@v4.0.3
         with:
           major_pattern: "major:"
-          minor_pattern: "feat:"
-          patch_pattern: "fix:"
+          minor_pattern: "feat:|fix:"
           tag_prefix: "v"
           short_tags: true
           bump_each_commit: false
@@ -37,17 +36,15 @@ jobs:
       - name: Debug Semantic Version Outputs
         run: |
           echo "Version: ${{ steps.version.outputs.version }}"
-
       - name: Docker login
         env:
           DOCKER_USER: ${{ secrets.DOCKER_USER }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
           echo $DOCKER_PASSWORD | docker login -u $DOCKER_USER --password-stdin
-
       - name: Build Docker Image
         env:
           NEW_VERSION: ${{ steps.version.outputs.version }}
         run: |
-          docker buildx build --platform linux/amd64,linux/arm64 -t "cryss/bookhub:${NEW_VERSION}" --push .
-          docker buildx build --platform linux/amd64,linux/arm64 -t "cryss/bookhub:latest" --push .
+          docker buildx build --platform linux/amd64,linux/arm64 -t "cryss/bookhub:${NEW_VERSION}" --push.
+          docker buildx build --platform linux/amd64,linux/arm64 -t "cryss/bookhub:latest" --push.
