--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -47,5 +47,7 @@ jobs:
         env:
           NEW_VERSION: ${{ steps.version.outputs.version }}
         run: |
-          docker buildx build --platform linux/amd64,linux/arm64 -t "cryss/bookhub:${NEW_VERSION}" --push.
-          docker buildx build --platform linux/amd64,linux/arm64 -t "cryss/bookhub:latest" --push.
+          docker buildx build --platform linux/amd64,linux/arm64 -t "cryss/bookhub:${NEW_VERSION}".
+          docker buildx build --platform linux/amd64,linux/arm64 -t "cryss/bookhub:latest".
+          docker push "cryss/bookhub:${NEW_VERSION}"
+          docker push "cryss/bookhub:latest
