yaporfavor docker-image.yml

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,6 +38,10 @@ jobs:
         run: |
           echo "Version: ${{ steps.version.outputs.version }}"
 
+      - name: Set Docker Version
+        id: set_docker_version
+        run: echo "VERSION=${{ steps.version.outputs.version }}" >> $GITHUB_ENV
+
       - name: Docker login
         env:
           DOCKER_USER: ${{ secrets.DOCKER_USER }}
@@ -46,8 +50,6 @@ jobs:
           echo $DOCKER_PASSWORD | docker login -u $DOCKER_USER --password-stdin
 
       - name: Build and Push Docker Image
-        env:
-          VERSION: ${{ steps.version.outputs.version }}
         run: |
-          docker buildx build --platform linux/amd64,linux/arm64 -t "cryss/bookhub:${VERSION}" --push .
+          docker buildx build --platform linux/amd64,linux/arm64 -t "cryss/bookhub:${{ env.VERSION }}" --push .
           docker buildx build --platform linux/amd64,linux/arm64 -t "cryss/bookhub:latest" --push .
