--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -54,7 +54,7 @@ jobs:
           MINOR: ${{ steps.version.outputs.minor }}
           PATCH: ${{ steps.version.outputs.patch }}
         run: |
-          docker buildx build -f bookhub/Dockerfile --platform linux/amd64,linux/arm64 -t "cryss/bookhub:${MAJOR}.${MINOR}.${PATCH}" --push .
-          docker buildx build -f bookhub/Dockerfile --platform linux/amd64,linux/arm64 -t "cryss/bookhub:latest" --push .
+          docker buildx build -f bookHub/Dockerfile --platform linux/amd64,linux/arm64 -t "cryss/bookhub:${MAJOR}.${MINOR}.${PATCH}" --push .
+          docker buildx build -f bookHub/Dockerfile --platform linux/amd64,linux/arm64 -t "cryss/bookhub:latest" --push .
 
 
