--- a/bookHub/Dockerfile
+++ b/bookHub/Dockerfile
@@ -20,11 +20,11 @@ RUN apt-get update && apt-get install -y \
     && docker-php-ext-install pdo pdo_mysql
 
 # Copia la configuración personalizada de Apache
-
-#Este COPY debe deascomentarse cuando se ejecute el contenedor de docker.
+#Este Copy es para el flujo de control de versiones.
 COPY bookHub/apache-config.conf /etc/apache2/sites-available/000-default.conf
-# Para probar con XAMPP
+# Este COPY debe deascomentarse cuando se ejecute el contenedor de docker.
 # COPY ./apache-config.conf /etc/apache2/sites-available/000-default.conf
+
 # Expone el puerto 80
 EXPOSE 80
 
